# LicketyRESPLIT

./: .gitignore  LICENSE  MANIFEST.in  Tree.py  Trie.py  benchmark_results_incremental.csv  bike_binarized.csv  binary_parity_dataset.csv  fairness.slurm  fairness_batch.py  lickety_resplit.cpp  lickety_wrapper.py  licketyresplit.py  licketyresplit_rashomon_importance_distribution.py  pyproject.toml  rashomon_importance_distribution.py  readme.md  requirements.txt  rid_correlations.ipynb  rid_correlations.py  run_lickety_package.py  run_one.ipynb  run_one.py  run_one.py.lprof  run_one_2.py  run_one_fairness.py  run_one_with_reference.py  run_praxis_package.py  setup.cfg  setup.py  treefarms_rid_utils.py  treefarms_vi_utils.py  trie_vs_notrie.csv
.github/workflows/: wheels.yml
Maybe Useful/: Tree.py  lickety_vi_utils.py  licketyresplit_rashomon_importance_distribution.py  resplit_licketyresplit_treefarms_results.csv  resplit_rashomon_importance_distribution.py  rid_correlations.py  run_one.ipynb  run_one.py  run_one_with_reference.py
data/: collect.py
examples/: example.ipynb  example.py  run_licketyresplit.py
plots/: simple.py
results/: combine_results.py
src/licketyresplit/: __init__.py  _core.cpp
src/licketyresplit/cpp/: lickety_resplit.cpp  rid.cpp
src/praxis/: __init__.py  _core.cpp  _threshold_guessing.py
src/praxis/cpp/: praxis.cpp  rid.cpp
tests/: test_basic.py
