[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.13", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis"
version = "0.0.5"
description = "Rashomon set tools via PRAXIS (includes approximation, exact calculation, and variable importance utilities)"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "Zakk Heile" },
  { name = "Hayden McTavish" },
  { name = "Varun Babbar" },
  { name = "Margo Seltzer" },
  { name = "Cynthia Rudin" }
]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6",
  "scikit-learn>=1.1",
  "pandas>=1.5"
]

[project.urls]
Homepage = "https://github.com/zakk-h/LicketyRESPLIT"
